# swiftconcur

./: .dockerignore  .gitignore  AGENTS.md  AUTOMATED_TESTING_SUMMARY.md  CI_CACHING_LINTING_SUMMARY.md  Cargo.toml  DEPLOYMENT_ENHANCEMENTS_SUMMARY.md  DOCKER_OPTIMIZATION_GUIDE.md  Dockerfile  LAUNCH.md  PERFORMANCE_BUDGET.md  README.md  action.yml  base_rules.md  create-test-project.sh  entrypoint.sh  package-lock.json  package.json  test-local.sh
.deployment/: config.yml
LAUNCH/: LAUNCH copy 1.md  LAUNCH copy 10.md  LAUNCH copy 11.md  LAUNCH copy 12.md  LAUNCH copy 13.md  LAUNCH copy 14.md  LAUNCH copy 2.md  LAUNCH copy 3.md  LAUNCH copy 4.md  LAUNCH copy 5.md  LAUNCH copy 6.md  LAUNCH copy 7.md  LAUNCH copy 8.md  LAUNCH copy 9.md
api/: .eslintcache  .eslintrc.js  .eslintrc.json  .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
cli/: Cargo.toml
cli/src/: main.rs
dashboard/: .env.example  .env.local  .eslintcache  .eslintrc.js  .eslintrc.json  .prettierrc.js  AUTHENTICATION.md  BILLING_IMPLEMENTATION.md  DUAL_BILLING_SYSTEM.md  PHASE5_COMPLETION_SUMMARY.md  STRIPE_SETUP.md  SUPABASE_CONFIG.md  jest.config.js  jest.env-setup.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: ENHANCED_DEPLOYMENT.md  TESTING_GUIDE.md
instructions/: claude-code-instructions.md  phase1-parser-detailed.md  phase1-parser.md  phase2-action-detailed.md  phase2-action.md  phase3-api-detailed.md  phase3-api.md  phase4-dashboard-detailed.md  phase4-dashboard.md  phase5-billing-detailed.md  phase5-billing.md
parser/: .clippy.toml  Cargo.toml  criterion_config.toml  rustfmt.toml  tarpaulin.toml
parser/benches/: parsing_benchmarks.rs
parser/src/: cli.rs  error.rs  lib.rs  main.rs
parser/src/formatters/: json.rs  markdown.rs  mod.rs  slack.rs
parser/src/models/: context.rs  mod.rs  run.rs  warning.rs
parser/src/parser/: mod.rs  patterns.rs  rawlog.rs  warnings.rs  xcodebuild.rs  xcresult.rs
parser/tests/: integration_tests.rs  rawlog_integration.rs
parser/tests/fixtures/: actor_isolation.json  actor_isolation_with_context.json  clean_build.json  comprehensive_warnings.json  mixed_warnings.json  sendable_warnings.json  xcresult_empty.json  xcresult_errors_only.json  xcresult_multiple_warnings.json  xcresult_single_warning.json
parser/tests/sample_sources/Sources/MyApp/: DataManager.swift
prompts/: context.md
scripts/: check-status.sh  deploy.sh  docker-build-optimization.sh  package.json  test.sh  (+4 more)
(+194 files in other folders)
