[package]
name = "swiftconcur-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
anyhow = "1.0"
lazy_static = "1.4"
uuid = { version = "1.10", features = ["v4"] }

[[bench]]
name = "parsing_benchmarks"
harness = false

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
